<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/list_title_margin_top"
        android:text="@string/main_vision_button"
        android:textAppearance="@style/TextAppearanceMainVision" />

    <com.neave.mobilenet.ListCardView
        android:id="@+id/vision_card_preview_click_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/list_content_margin"
        android:elevation="1dp"
        app:descriptionRes="@string/vision_card_preview_description"
        app:imageRes="@drawable/ic_image_classification_s"
        app:titleRes="@string/vision_card_preview_title" />

    <com.neave.mobilenet.ListCardView
        android:id="@+id/vision_card_capture_click_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/list_content_margin"
        android:elevation="1dp"
        app:descriptionRes="@string/vision_card_capture_description"
        app:imageRes="@drawable/ic_image_classification_s"
        app:titleRes="@string/vision_card_capture_title">

    </com.neave.mobilenet.ListCardView>

    <com.neave.mobilenet.ListCardView
        android:id="@+id/vision_card_load_click_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/list_content_margin"
        android:elevation="1dp"
        app:descriptionRes="@string/vision_card_load_description"
        app:imageRes="@drawable/ic_image_classification_s"
        app:titleRes="@string/vision_card_load_title"></com.neave.mobilenet.ListCardView>

</LinearLayout>