<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:fitsSystemWindows="true">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginTop="@dimen/toolbar_top_margin"
        android:background="@null"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:title="@string/loadNcapture_image_classification_title" />

    <Button
        android:id="@+id/button_next_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:text="Next"
        app:layout_constraintEnd_toEndOf="@+id/load_imageView"
        app:layout_constraintTop_toTopOf="@+id/toolbar2" />

    <ImageView
        android:id="@+id/load_imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:contentDescription="@string/load_image_content_desc"
        app:layout_constraintBottom_toTopOf="@+id/image_classification_result_header_row"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar2"
        app:layout_constraintVertical_bias="1.0" />

    <com.neave.mobilenet.vision.view.ResultRowView
        android:id="@+id/image_classification_result_header_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/image_classification_result_row_margin"
        android:padding="@dimen/image_classification_result_row_padding"
        app:layout_constraintBottom_toTopOf="@id/image_classification_top1_result_row"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:textAppearance="@style/TextAppearanceImageClassificationResultHeader" />

    <com.neave.mobilenet.vision.view.ResultRowView
        android:id="@+id/image_classification_top3_result_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/image_classification_result_row_margin"
        android:padding="@dimen/image_classification_result_row_padding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:progressBarDrawableProgressStateRes="@drawable/result_row_progress_bar_progress_state"
        app:progressBarDrawableRes="@drawable/result_row_progress_bar_top3"
        app:progressBarHeightRes="@dimen/result_row_progress_bar_height_top2plus"
        app:progressBarPaddingRes="@dimen/result_row_progress_bar_padding"
        app:textAppearance="@style/TextAppearanceImageClassificationResultTop2Plus" />

    <com.neave.mobilenet.vision.view.ResultRowView
        android:id="@+id/image_classification_top2_result_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/image_classification_result_row_margin"
        android:padding="@dimen/image_classification_result_row_padding"
        app:layout_constraintBottom_toTopOf="@id/image_classification_top3_result_row"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:progressBarDrawableProgressStateRes="@drawable/result_row_progress_bar_progress_state"
        app:progressBarDrawableRes="@drawable/result_row_progress_bar_top2"
        app:progressBarHeightRes="@dimen/result_row_progress_bar_height_top2plus"
        app:progressBarPaddingRes="@dimen/result_row_progress_bar_padding"
        app:textAppearance="@style/TextAppearanceImageClassificationResultTop2Plus" />

    <com.neave.mobilenet.vision.view.ResultRowView
        android:id="@+id/image_classification_top1_result_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/image_classification_result_row_margin"
        android:padding="@dimen/image_classification_result_row_padding"
        app:layout_constraintBottom_toTopOf="@id/image_classification_top2_result_row"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:progressBarDrawableProgressStateRes="@drawable/result_row_progress_bar_progress_state"
        app:progressBarDrawableRes="@drawable/result_row_progress_bar_top1"
        app:progressBarHeightRes="@dimen/result_row_progress_bar_height_top1"
        app:progressBarPaddingRes="@dimen/result_row_progress_bar_padding"
        app:textAppearance="@style/TextAppearanceImageClassificationResultTop1" />

    <Button
        android:id="@+id/button_load_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:text="@string/load_image_button"
        android:textAppearance="@style/TextAppearanceMainVision"
        app:layout_constraintBottom_toTopOf="@+id/image_classification_result_header_row"
        app:layout_constraintEnd_toEndOf="@+id/load_imageView"
        app:layout_constraintStart_toStartOf="@+id/load_imageView"
        app:layout_constraintTop_toBottomOf="@+id/toolbar2" />
</androidx.constraintlayout.widget.ConstraintLayout>